memo/memo-with-references/tests/5-expected-token-indicating-cache-arg.rs
use memo_with_references::memo;

#[memo()]
fn memome() {}

fn main() {}
